whitespace and minor style fixes

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -14,7 +14,12 @@
 
 .cell-label {
 	padding: 3px;
+	padding-right: 15px;
 	color: #aaa;
+}
+
+.cell-button {
+	padding: 3px 5px;
 }
 
 .clickable:hover {
